# advent-of-code

./: .gitignore  README.md  pyproject.toml
advent_of_code/: README.md  aoc.py  config.py
advent_of_code/aoc/: runner.py
advent_of_code/aoc/cli/: cli.py
advent_of_code/aoc/prepare_solution/: base_solution.py  download_input.py  prepare_solution.py
advent_of_code/aoc/runner/: runner.py
advent_of_code/aoc/templates/: solution_template.py
advent_of_code/aoc/utils/: path_utils.py
advent_of_code/solutions/year_2021/day_01/: solution  solution.py
advent_of_code/solutions/year_2021/day_02/: solution.py
advent_of_code/solutions/year_2021/day_03/: solution.py
advent_of_code/solutions/year_2021/day_04/: solution.py
advent_of_code/solutions/year_2021/day_05/: solution.py
advent_of_code/solutions/year_2021/day_06/: solution.py
advent_of_code/solutions/year_2021/day_07/: solution.py
advent_of_code/solutions/year_2021/day_08/: solution.py
advent_of_code/solutions/year_2021/day_09/: solution.py
advent_of_code/solutions/year_2022/day_01/: solution.py
advent_of_code/solutions/year_2022/day_02/: solution.py
advent_of_code/solutions/year_2022/day_03/: solution.py
advent_of_code/solutions/year_2022/day_04/: solution.py
advent_of_code/solutions/year_2022/day_05/: solution.py
advent_of_code/solutions/year_2022/day_06/: solution.py
advent_of_code/utils/: cli.py  download_inputs.py  package_helpers.py
tests/aoc/utils/: test_package_utils.py  test_path_utils.py
tests/utils/: test_download_inputs.py  test_package_helpers.py
(+9 files in other folders)
